# rent-vs-buy-uk

./: .gitignore  Makefile  pyproject.toml  readme.md
data/: boeBaseRates.csv  historicalEssexHousePrices.csv  historicalHertfordshireHousePrices.csv  historicalKentHousePrices.csv  historicalLondonHousePrices.csv  historicalUkHousePrices.csv  mortgageRates.csv  snp500Returns.csv  ukInflation.csv
src/: analysis.py  helpers.py  historicalData.py  historicalScenarioRunner.py  main.py  plotHelpers.py  scenarioRunner.py  scenarios.py
